--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -81,10 +81,13 @@
     <h3>A population model you can count on</h3>
     <p> 
 
-      The LANDSAT landstats experiment uses supervised learning to predict socio-economic characteristics from satellite data. Specifically, a convolutional neural network to predicts population density from LANDSAT 7 Top Of Atmosphere (TOA) composites. You can easily modify this framwork to employ other models to predict other socio-economic characteristics, using other satellite images. If you're interested in modifying this or in the details, see the <a href="https://github.com/patrick-dd/landsat-landstats">github repository</a>. 
+      The LANDSAT landstats experiment uses supervised learning to predict socio-economic characteristics from satellite data. 
+
+</p>
+<p> I train a convolutional neural network to predicts population density from LANDSAT 7 Top Of Atmosphere (TOA) composites. You can easily modify this framework to predict other socio-economic characteristics. If you're interested in doing so or in the details, please see the <a href="https://github.com/patrick-dd/landsat-landstats">github repository</a>. 
     </p>
     <p>
-      LANDSAT landstats aims to augment government service delivery at low cost. The model here was developed within four weeks at <a href="http://www.insightdatascience.com">Insight Data Science</a> NYC in winter 2016. Given the limited time frame and computational resources, the census projections outperform LANDSAT landstats. The experiment provides promise of improving the precision of government statistics and government service delivery.
+      LANDSAT landstats aims to augment government service delivery at low cost. The model here was developed within four weeks at <a href="http://www.insightdatascience.com">Insight Data Science</a> NYC in winter 2016. Given the limited time frame and computational resources, the census projections outperform LANDSAT landstats. The experiment provides promise of improving the precision of government statistics and government service delivery. If you'd like to chat about this, please <a href="/contact">get in touch</a>.
     </p>
             </div>
             </div>
