--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -86,7 +86,7 @@
 
 <a href="https://www.linkedin.com/pub/patrick-doupe/1/9a/721" style="text-decoration:none;">
 <span style="font 80% Helvetica, san-serif;color:#0783B6;">
-<img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" border="0" alt="View Patrick Doupe's profile on LinkedIn" style="vertical-align:middle;" border="0">&nbsp;View Patrick Doupe's profile</span>
+<img src="https://static.licdn.com/scds/common/u/img/webpromo/btn_in_20x15.png" width="20" height="15" border="0" alt="View my profile on LinkedIn" style="vertical-align:middle;" border="0">&nbsp;View my profile</span>
     </a>
     </div>
 </div>
