--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -50,6 +50,7 @@
             <li class="active"></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
+            <li><a href="/demo">Demo</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
