--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -50,7 +50,6 @@
             <li class="active"></li>
             <li><a href="/about">About</a></li>
             <li><a href="/contact">Contact</a></li>
-            <li><a href="/demo">Demo</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -104,4 +103,4 @@
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
-</html>
+</html>[]
